# datex

./: .gitattributes  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md
crates/datex/: Cargo.toml  README.md  lib.rs  logger.rs
crates/datex-core/: Cargo.toml  README.md
crates/datex-core/benches/: mod.rs  runtime.rs
crates/datex-core/benches/json/: mod.rs  utils.rs
crates/datex-core/src/: lib.rs  prelude.rs  task.rs
crates/datex-core/src/ast/: expressions.rs  mod.rs  resolved_variable.rs  src_id.rs  type_expressions.rs
crates/datex-core/src/channel/: mod.rs  mpsc.rs
crates/datex-core/src/compiler/: context.rs  error.rs  mod.rs  scope.rs  type_compiler.rs  workspace.rs
crates/datex-core/src/core_compiler/: core_compilation_context.rs  core_compiler_context.rs  injected_values.rs  mod.rs  shared_value_tracking.rs  type_compiler.rs  value_compiler.rs
crates/datex-core/src/decompiler/: ast_from_bytecode.rs  ast_from_value_container.rs  ast_to_source_code.rs  mod.rs
crates/datex-core/src/dif/: cache.rs  deserialization.rs  deserialization_context.rs  dif_interface.rs  error.rs  interface.rs  mod.rs  reference.rs  representation.rs  serde_context.rs  serialization.rs  serialization_context.rs  type.rs  update.rs  value.rs
crates/datex-core/src/dif_old/: interface.rs  mod.rs  reference.rs  type.rs  update.rs  value.rs
crates/datex-core/src/disassembler/: disassembler.rs  mod.rs  options.rs
crates/datex-core/src/dxb_parser/: body.rs  instruction_collector.rs  mod.rs  next_instructions_stack.rs
crates/datex-core/src/fmt/: bracketing.rs  formatting.rs  mod.rs
crates/datex-core/src/global/: dxb_block.rs  instruction_codes.rs  mod.rs  slots.rs  type_instruction_codes.rs
crates/datex-core/src/libs/: core.rs  library.rs  mod.rs
crates/datex-core/src/lsp/: io.rs  mod.rs  type_hint_collector.rs  utils.rs  variable_declaration_finder.rs
crates/datex-core/src/macro_utils/: entrypoint.rs  mod.rs
crates/datex-core/src/network/: block_handler.rs  mod.rs
crates/datex-core/src/parser/: errors.rs  lexer.rs  mod.rs  utils.rs
crates/datex-core/src/references/: mutations.rs  observers.rs  reference.rs  type_reference.rs  value_reference.rs
crates/datex-core/src/runtime/: config.rs  dif_interface.rs  env.rs  incoming_sections.rs  internal.rs  memory.rs  mod.rs  pointer_address_provider.rs  request_move.rs  runner.rs  test_utils.rs
crates/datex-core/src/serde/: deserialization.rs  deserialization_context.rs  deserializer.rs  error.rs  mod.rs  serialization.rs  serializer.rs
crates/datex-core/src/shared_values/: errors.rs  external_shared_container.rs  internal_traits.rs  mod.rs  mutations.rs  observers.rs  owned_shared_container.rs  ownership.rs  pointer.rs  pointer_address.rs  reference.rs  referenced_shared_container.rs  self_owned_shared_container.rs  serde_dif.rs  shared_container.rs  shared_container_bu.rs  shared_container_inner.rs  shared_type_container.rs  shared_value_container.rs  type_reference.rs  value_reference.rs
crates/datex-core/src/storage/: mod.rs  storage_interface.rs
crates/datex-core/src/stub/: crypto.rs  mod.rs  time.rs
crates/datex-core/src/traits/: apply.rs  mod.rs  structural_eq.rs
crates/datex-core/src/type_inference/: error.rs  mod.rs
crates/datex-core/src/types/: collection_type_definition.rs  definition.rs  error.rs  literal_type_definition.rs  mod.rs  nominal_type_definition.rs  shared_container_containing_nominal_type.rs  shared_container_containing_type.rs  structural_type_definition.rs  type.rs  type_alias.rs  type_definition.rs  type_definition_with_metadata.rs  type_match.rs
crates/datex-core/src/utils/: ansi_colors.rs  async_callback.rs  buffers.rs  color.rs  freemap.rs  maybe_action.rs  maybe_async.rs  mod.rs  once_consumer.rs  serde_hashmap.rs  serde_serialize_seed.rs  serde_serialized_owned.rs  task_manager.rs  uuid.rs
crates/datex-core/src/value_updates/: dif_interface.rs  errors.rs  mod.rs  update_data.rs  update_handler.rs
crates/datex-core/src/values/: borrowed_value_container.rs  cast.rs  core_value.rs  mod.rs  pointer.rs  value.rs  value_container.rs
crates/datex-core/src/visitor/: mod.rs
crates/datex-core/tests/: mod.rs  protocol_structures.rs  runtime.rs  value_execution_consistency.rs
crates/datex-core/tests/compiler/: mod.rs
crates/datex-crypto-embedded/: Cargo.toml  README.md
crates/datex-crypto-embedded/src/: lib.rs
crates/datex-crypto-esp32/: Cargo.toml  README.md
crates/datex-crypto-esp32/.cargo/: config.toml
crates/datex-crypto-esp32/src/: lib.rs
crates/datex-crypto-facade/: Cargo.toml  README.md
crates/datex-crypto-facade/src/: crypto.rs  error.rs  lib.rs
crates/datex-crypto-native/: Cargo.toml  README.md
crates/datex-crypto-native/src/: lib.rs
crates/datex-crypto-web/: Cargo.toml  README.md
crates/datex-crypto-web/src/: lib.rs  utils.rs
crates/datex-macros/: Cargo.toml  README.md
crates/datex-macros/src/: compile.rs  execute.rs  lib.rs  test.rs  utils.rs
crates/datex-macros/tests/: execute.rs  mod.rs  precompile.rs
crates/datex/ast/: expressions.rs
crates/datex/benches/: mod.rs
crates/datex/compiler/: mod.rs  type_compiler.rs
crates/datex/core_compiler/: value_compiler.rs
crates/datex/crypto/: crypto.rs  mod.rs
crates/datex/decompiler/: ast_from_bytecode.rs  ast_from_value_container.rs  ast_to_source_code.rs  mod.rs
crates/datex/dif/: mod.rs  type.rs  value.rs
crates/datex/dxb_parser/: body.rs  instruction_collector.rs
crates/datex/fmt/: formatting.rs
crates/datex/global/: dxb_block.rs  type_instruction_codes.rs
crates/datex/libs/: core.rs
crates/datex/parser/: lexer.rs  mod.rs
crates/datex/references/: mutations.rs
crates/datex/runtime/: mod.rs
crates/datex/src/: lib.rs  prelude.rs  task.rs
crates/datex/src/dif/: mod.rs  (+5 more)
crates/datex/tests/: compiler.rs  mod.rs  protocol_structures.rs
crates/datex/type_inference/: mod.rs
crates/datex/types/: definition.rs
crates/datex/utils/: time.rs  uuid.rs
crates/datex/values/: pointer.rs
crates/datex/visitor/: mod.rs
crates/native/: Cargo.toml  mod.rs
(+669 files in other folders)
