cargo-features = ["profile-rustflags"]

[package]
name = "datex-core"
version = "0.0.8"
description = "The DATEX Core Rust implementation"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
    "Norbert Brzezinski <norbert@unyt.org>",
]
edition = "2024"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "mod"
harness = false

[lints.clippy]
std_instead_of_core = "deny"
alloc_instead_of_core = "deny"
std_instead_of_alloc = "deny"


[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]

# core dependencies
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
num = { version = "0.4.3", default-features = false, features = [
    "alloc",
    "libm",
] }
num-bigint = { version = "0.4", default-features = false }
num-integer = { version = "0.1", default-features = false }
num_enum = { version = "0.7.4", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
binrw = { version = "0.15.0", default-features = false }
modular-bitfield = "0.13.0"
thiserror = { version = "2.0.11", default-features = false }
url = { version = "2.5.7", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false, features = ["serde"] }
bytes = { version = "1", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
    "async-await-macro",
    "alloc",
] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
indexmap = { version = "2.9.0", default-features = false }
ordered-float = { version = "5.0.0", default-features = false }
bigdecimal = { version = "0.4.8", default-features = false }
ringmap = { version = "0.1.3", default-features = false }
futures-core = { version = "0.3.31", default-features = false, features = [
    "alloc",
] }
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_with = { version = "3.12.0", default-features = false, features = [
    "macros",
    "schemars_1",
    "chrono",
    "alloc",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }
serde-big-array = { version = "0.5.1" }
async-select = "0.3.0"
foldhash = { version = "0.2.0", default-features = false }
cfg-if = "1.0.1"
async-trait = "0.1.87"
strum_macros = { version = "0.27.1" }
datex-macros-internal = { path = "../datex-macros-internal", version = "0.0.1" }

# nostd-only dependencies (optional)
hashbrown = { version = "0.16.0", features = ["serde"], optional = true }
async-unsync = { version = "0.3.0", default-features = false, features = [
    "alloc",
], optional = true}
async-timer = { version = "1.0.0-beta.15", default-features = false, optional = true}
spin = { version = "0.10.0", default-features = false, features = [
    "spin_mutex",
    "mutex",
    "lock_api",
], optional = true }

# std-only dependencies (optional)
internment = { version = "0.8.6", optional = true  }


# lsp dependencies (optional)
realhydroper-lsp = { version = "0.22.0", default-features = false, features = [
    "proposed",
], optional = true }


# tokio dependencies (optional)
tokio = { version = "1.43.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
], default-features = false, optional = true }

# embassy dependencies (optional)
embassy-time = { version = "0.5.0", optional = true }
embassy-executor = { version = "0.9.1", optional = true }
embassy-futures = { version = "0.1.2", optional = true, default-features = false }

# wasm dependencies (optional)
web-time = { version = "1.1.0", optional = true }
wasm-bindgen-futures = { version = "0.4.29", optional = true }
tsify = { version = "0.5.6", features = ["js"], optional = true}
wasm-bindgen = { version = "=0.2.105", optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }

# native dependencies (optional)
dotenvy = { version = "0.15.7", optional = true }

# compiler/decompiler dependencies (optional)
ariadne = { version = "0.5.1", optional = true }
syntect = { version = "5.2.0", default-features = false, optional = true, features = [
    "default-fancy",
] }
pretty = { version = "0.12.5", optional = true }
logos = { version = "0.15.0", optional = true }

# crypto facade crates (optional)
datex-crypto-facade = { path = "../datex-crypto-facade", version = "0.0.1" }
datex-crypto-native = { path = "../datex-crypto-native", version = "0.0.1", optional = true }
datex-crypto-esp32 = { path = "../datex-crypto-esp32", version = "0.0.1", optional = true }
datex-crypto-web = { path = "../datex-crypto-web", version = "0.0.1", optional = true }


# macro_utils dependencies (optional)
quote = { version = "1.0", optional = true}
syn = { version = "2.0", features = ["full"], optional = true }
proc-macro2 = { version = "1.0", features = ["span-locations"], optional = true }

# webrtc features (optional)
webrtc = { version = "0.13.0", optional = true }

# Development dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
matchbox_signaling = { version = "0.12.0" }
tokio = { version = "1.43.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
], default-features = false }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
json-syntax = "0.12.5"
lazy_static = "1.4.0"
ntest_timeout = "0.9.3"
indoc = "2.0.6"
# enables native crypto for tests
datex-crypto-native = { path = "../datex-crypto-native" }
flexi_logger = { version = "0.31.8"  }


[features]
# alloc = [] see https://github.com/unyt-org/datex/issues/699

# When using the "std" feature, the "default" feature should not be enabled since
# it includes no_std-specific dependencies
default = [
    "no_std",
    "dep:async-timer"
]

no_std = [
    "dep:hashbrown",
    "dep:async-unsync",
    "dep:spin"
]

### features for specific targets #############################################

# esp32 - no_std, embassy runtime
target_esp32 = [
    "no_std",
    "embassy_runtime",
    "dep:datex-crypto-esp32"
]

# native - std, tokio runtime
target_native = [
    "std",
    "tokio_runtime",
    "dep:datex-crypto-native",
    "dep:dotenvy",
]

# wasm - std, wasm runtime
target_wasm = [
    "std",
    "wasm_runtime",
]


### runtimes ##################################################################
tokio_runtime = [
    "dep:tokio",
    "futures/std",
]
wasm_runtime = [
    "dep:wasm-bindgen-futures",
    "dep:gloo-timers",
    "dep:tsify",
    "dep:wasm-bindgen",
    "dep:web-time",
    "dep:datex-crypto-web",
]
embassy_runtime = [
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-futures",
]

# only required for legacy syntax highlighting in decompiler, will be removed in the future
syntax_highlighting_legacy = ["dep:syntect"]

# when enabled, unsigned DXB blocks are accepted
allow_unsigned_blocks = []

# Configuration for std
std = [
    "dep:internment",
    "serde/std",
    "serde_with/std",
    "serde_json/std",
    "indexmap/std",
    "log/std",
    "futures-util/std",
    "futures-core/std",
    "futures/std",
    "url/std",
    "num/std",
    "num-traits/std",
    "num-bigint/std",
    "num-integer/std",
    "bigdecimal/std",
    "ordered-float/std",
    "num_enum/std",
    "strum/std",
    "binrw/std",
    "thiserror/std",
    "hex/std",
    "bytes/std",
    "ringmap/std",
    "macro_utils",
]

### compiler-related features #################################################

# ast structures, needed by compiler, decompiler, and lsp
ast = []

parser = [
    "dep:logos",
]

compiler = [
    "ast",
    "parser",
    "dep:ariadne",
    "dep:pretty"
]

decompiler = [
    "ast"
]


### LSP-related features ######################################################

lsp = ["dep:realhydroper-lsp"]
# lsp support
lsp_tokio = ["lsp", "realhydroper-lsp/runtime-tokio"]
# enable runtime-agnostic feature for realhydroper-lsp in wasm
lsp_wasm = ["lsp", "realhydroper-lsp/runtime-agnostic"]


### Utils for creating macros #################################################

macro_utils = [
    "dep:quote",
    "dep:syn",
    "dep:proc-macro2",
]


### interface-related features ################################################

webrtc = ["dep:webrtc"]