[package]
name = "datex-crypto-embedded"
version = "0.0.1"
description = "Embedded implementation of the DATEX Crypto facade"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
    "Norbert Brzezinski <norbert@unyt.org>",
]
edition = "2024"
license-file = "LICENSE"

[lib]
crate-type = ["rlib"]

[lints.clippy]
std_instead_of_core = "deny"
alloc_instead_of_core = "deny"
std_instead_of_alloc = "deny"

[dependencies]
datex-crypto-facade = { path = "../datex-crypto-facade", version = "0.0.1" }

[target.'cfg(all(target_arch = "xtensa", target_vendor = "esp32s3"))'.dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
    "esp32s3",
    "unstable",
    "psram",
] }

[target.'cfg(all(target_arch = "xtensa", target_vendor = "esp32"))'.dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = ["esp32", "unstable", "psram"] }

[target.'cfg(target_arch = "riscv32")'.dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
    "esp32c2",
    "unstable",
    "psram",
] }
