[package]
name = "datex-crypto-esp32"
version = "0.0.1"
description = "Embedded ESP32 target implementation of the DATEX Crypto facade"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
    "Norbert Brzezinski <norbert@unyt.org>",
]
edition = "2024"
license-file = "LICENSE"


[lib]
crate-type = ["rlib"]

[lints.clippy]
std_instead_of_core = "deny"
alloc_instead_of_core = "deny"
std_instead_of_alloc = "deny"

[dependencies]
datex-crypto-facade = { path = "../datex-crypto-facade", version = "0.0.1" }
spin = "0.10.0"
static_cell = "2.1.1"
aes = { version = "0.8.4", default-features = false }
ctr = { version = "0.9.2", default-features = false }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
log = { version = "0.4.29", default-features = false }
ed25519-dalek = {version = "2.2", features = ["alloc", "pem", "pkcs8"], default-features = false }
x25519-dalek = {version = "2.0", features = ["static_secrets"], default-features = false }
rand = { version = "0.10", default-features = false }
pkcs8 = {version = "0.10", features = ["alloc", "pem"], default-features = false }
der = { version = "0.7", default-features = false }
spki = { version = "0.7", default-features = false }

[dev-dependencies]
tokio = {version = "1.5", features = ["full"]}

[target.xtensa-esp32s3-none-elf.dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable", "psram"] }

[target.xtensa-esp32-none-elf.dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "unstable", "psram"] }

[target.riscv32imc-unknown-none-elf.dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c2", "unstable", "psram"] }
