[package]
name = "datex-crypto-native"
version = "0.0.1"
description = "Native implementation of the DATEX Crypto facade"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
    "Norbert Brzezinski <norbert@unyt.org>",
]
edition = "2024"
license-file = "LICENSE"

[lib]
crate-type = ["rlib"]

[dependencies]
rand = { version = "0.9.2" }
datex-crypto-facade = { path = "../datex-crypto-facade", version = "0.0.1" }
uuid = { version = "1.15.1", features = ["v4"] }
openssl = { version = "0.10.73" }
