[package]
name = "datex-crypto-web"
version = "0.0.2"
description = "Web implementation of the DATEX Crypto facade for WASM targets"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
    "Norbert Brzezinski <norbert@unyt.org>",
]
edition = "2024"
license-file = "LICENSE"

[lib]
crate-type = ["rlib"]

[dependencies]
datex-crypto-facade = { path = "../datex-crypto-facade", version = "0.0.2" }
wasm-bindgen = { version = "=0.2.112", features = [] }
wasm-bindgen-futures = "0.4.61"
pkcs8 = {version = "0.10", features = ["alloc", "pem"], default-features = false }
der = { version = "0.7", default-features = false }
ed25519-dalek = {version = "2.2", default-features = false }
x25519-dalek = {version = "2.0", features = ["static_secrets"], default-features = false }
spki = { version = "0.7", default-features = false }

[dependencies.web-sys]
version = "0.3.82"
features = [
    "Window",
    "AesCtrParams",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "CryptoKeyPair",
    "Serial",
    "SerialPort",
    "Navigator",
    "ReadableStream",
    "WritableStream",
    "SerialOptions",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
    "EventTarget",
    "MessageEvent",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcIceCandidateInit",
    "RtcIceConnectionState",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcConfiguration",
    "RtcIceServer",
    "MediaStream",
]
