[package]
name = "datex-native"
version = "0.0.8"
description = "DATEX Native Extensions"
authors = [
    "Benedikt Strehle <benedikt@unyt.org>",
    "Jonas Strehle <jonas@unyt.org>",
    "Norbert Brzezinski <norbert@unyt.org>"
]
edition = "2024"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
datex-macros = { path = "../datex-macros", version = "0.1.3" }
datex = { path = "../datex", version = "0.0.8" }

futures-util = { version = "0.3" }
futures = { version = "0.3" }
tokio = { version = "1.43.0" }
log = { version = "0.4", features = ["serde"] }
flexi_logger = { version = "0.31.2" }
async_tiny = { version = "0.4.0", optional = true }
tokio-tungstenite = { version = "0.21.0", optional = true, features = [
    "native-tls",
] }
tungstenite = { version = "0.21.0", optional = true }
reqwest = { version = "0.13.1", optional = true }
serialport = { version = "4.7.1", optional = true }
rand = { version = "0.8.5" }
uuid = { version = "1.15.1", features = ["v4"] }
openssl = { version = "0.10.73", optional = true }

[features]
com_interface_http = [
    "dep:async_tiny",
    "dep:reqwest",
]

com_interface_websocket = [
    "dep:tokio-tungstenite",
    "dep:tungstenite",
]

com_interface_serial = [
    "dep:serialport",
]


default = [
    "com_interface_http",
    "com_interface_websocket",
]